--- a/nodejs-poc/package.json
+++ b/nodejs-poc/package.json
@@ -1,14 +1,15 @@
 {
   "name": "nodejs-poc",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "keycloak-connect": "19.0.1"
   }
 }
